k8s/apps/wodore/apps/imagor/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wd-imagor
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: wd-imagor
